# autohospital

./: .env.example  .gitignore  README.md
api/: alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py
api/app/: main.py
api/app/ai/: chunking.py  embeddings.py  llm.py  retrieval.py
api/app/api/: auth.py  chat_doctor.py  chat_patient.py  doctors.py  patients.py  scribe.py  translate.py
api/app/core/: audit.py  auth.py  config.py
api/app/db/: models.py  rls.py  schemas.py  session.py
api/app/services/: chat_service.py  guardrails.py  patient_service.py  translator_service.py
api/app/workers/: ingestion_worker.py
api/tests/: test_care_team_scope.py  test_cross_patient_isolation.py  test_prompt_injection.py
db/: seed.sql  setup.sql
docs/: phase_4_shared_memory.md  plan.md  srs.md
web/: middleware.ts  package.json
web/app/: globals.css  layout.tsx
web/app/(auth)/: layout.tsx
web/app/(auth)/login/: page.tsx
web/app/(auth)/register/: page.tsx
web/app/api/auth/login/: route.ts
web/app/api/auth/logout/: route.ts
web/app/api/auth/me/: route.ts
web/app/api/auth/register/: route.ts
web/app/api/chat/doctor/: route.ts
web/app/api/doctors/me/patients/: route.ts
web/app/doctor/chat/: page.tsx
web/app/doctor/dashboard/: page.tsx
web/app/patient/chat/: page.tsx
web/app/patient/dashboard/: page.tsx
web/components/: auth-provider.tsx  nav.tsx
web/lib/: api.ts  auth.ts
